--- a/client/src/components/4LandingPage/LandingPage.module.css
+++ b/client/src/components/4LandingPage/LandingPage.module.css
@@ -1,38 +1,56 @@
-/* .video {
-    position: fixed;
-    height: 900px;
-    top:50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    z-index: -1;
-  }
-    */
+.video {
+  position:fixed;
+  height: 900px;
+  top:60%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: -1;
+}
+ 
+.title1{
+  font-family: "fontnew" ;
+  color: rgb(241, 241, 226);
+  font-size:55px;
+  float: right;
+  padding-top: 1em;
+  padding-right: 1em;
 
-  .body {
-    /* background-image: url("https://images8.alphacoders.com/650/650205.jpg"); */
-    /* background-image: url("https://images7.alphacoders.com/346/346900.jpg"); */
-    /* background-image: url("https://images2.alphacoders.com/116/1165968.jpg"); */
-    /* background-image: url("https://images7.alphacoders.com/860/860273.jpg"); */
-    /* background-image: url("https://images5.alphacoders.com/364/364184.jpg"); */
-    /* background-image: url("https://images2.alphacoders.com/116/1165968.jpg"); */
-    /* padding: 30em;
-    padding: 30em;
-    height: 200px;
-    width: 500px;
-    background-position:center;  
-    background-size:contain;
-    background-repeat: no-repeat;
-  color:aliceblue;
-    
-} */
+}
 
-  background-image: url("https://mail.google.com/mail/u/0/?tab=om#inbox/FMfcgzGslbKpnmcRFGTdNmfrlBNwNGzl?projector=1&messagePartId=0.4");
-    /* "https://images7.alphacoders.com/346/346900.jpg"); */
-  background-position:center;  
-  background-size: auto;
-  background-repeat: no-repeat;
-color:aliceblue;
-padding: 2em;
-    height: 780px;
-    width: 1435px;
+.title2{
+  font-family: "fontnew" ;
+  color: rgb(255, 255, 255);
+  display: flex;
+  font-size:45px;
+  float:right;
+  padding-right: 2em;
+  padding-left: 25em;
+  padding-top: 1em;
+  /* padding-bottom: 90em; */
+  margin-right: 10px
+
+}
+
+
+/* .land button{
+background: #3068a38e;
+border: none;
+padding: 15px 25px;
+font-family: sans-serif;
+color: white;
+margin-top: 25px;
+margin-left: 10px;
+transition: all ease-in-out 0.2s;
+border-radius: 3px;
+}
+
+.land button:hover {
+  background: rgb(0, 0, 0);
+}    
+ */
+
+@font-face {
+  font-family: "fontnew";
+  src: url('../13Extras/SimpleThread_PERSONAL_USE_ONLY.otf');
+
 }
