--- a/client/src/components/1Home/Home.module.css
+++ b/client/src/components/1Home/Home.module.css
@@ -1,17 +1,11 @@
-/* .body {
-   
-    background-image: url("https://www.wallpapertip.com/wmimgs/193-1930392_pretty-ipad-background-bright.jpg");
+.body {
+    background-image: url("https://c4.wallpaperflare.com/wallpaper/1012/886/475/gradient-digital-art-minimalism-simple-wallpaper-preview.jpg");
     padding: 2em;
     height: 100%;;
     width: 100%;
-    border-radius: 10px;
-    /* position:relative; */
-    /* z-index: -1; */
-    /* background-attachment: fixed;
-    background-position:center;  
-    background-size: auto;
+    background-attachment: fixed;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-color: rgba(255, 228, 196, 0.767);
-    
-} */
+
+}
 
