--- a/client/src/components/2Details/Details.module.css
+++ b/client/src/components/2Details/Details.module.css
@@ -1,20 +1,34 @@
 .cardsGrid {
-    background-image: url("https://c4.wallpaperflare.com/wallpaper/1012/886/475/gradient-digital-art-minimalism-simple-wallpaper-preview.jpg");
+    background-image: url("https://cdn.shopify.com/s/files/1/0277/2615/1768/products/0056625_yoop-grey-dog-wallpaper_800x1026_crop_center@2x.jpg?v=1648232607");
     padding: 2em;
-    height: 100%;;
-    width: 100%;
     background-attachment: fixed;
-    background-size: cover;
+    background-size:cover;
     background-repeat: no-repeat;
-
+    /* background-color: rgba(223, 178, 118, 0.521); */
   }
 
+  /* .cardsGrid {
+    background-image: url("https://cdn.shopify.com/s/files/1/0277/2615/1768/products/0056625_yoop-grey-dog-wallpaper_800x1026_crop_center@2x.jpg?v=1648232607");
+    padding: 1em; /* Reducir el espacio de relleno */
+    /* background-attachment: fixed; */
+    /* background-size:cover; */
+    
+   
+/* background-repeat: no-repeat; */
+    /* width: 80%; Reducir el ancho de la tarjeta */
+/* } */ 
 
-.link button{
-  background: #3068a36c;
+ .img{
+    width: 30rem;
+    height: 30rem;
+    border-radius: 2%;
+  } 
+
+.link {
+  background: #b5842a6c;
   border: none;
   padding: 15px 25px 15px 25px;
-  font-family: "fontnew2";
+  /* font-family: "fontnew2"; */
   font-size: 30px;
   color: rgb(0, 0, 0);
   margin-bottom: 25px;
@@ -23,10 +37,18 @@
   border-radius: 50%;
 }
 
-.link button:hover {
-  background: rgba(236, 228, 228, 0.585);
+.link:hover {
+  background: rgba(154, 147, 147, 0.874);
 }  
 
+
+.parrafo {
+  color: #000000;
+  font-size: 30px;
+  font-family:"fontnew2";
+  border-radius: 1%;
+  box-shadow: 30px 30px 26px 35px rgb(117, 101, 101);
+}
 
 /* @font-face {
   font-family: "fontnew2";
@@ -38,3 +60,5 @@
   src: url('../images-font/Heaters.otf');
 
 } */
+
+
