--- a/client/src/components/4LandingPage/LandingPage.module.css
+++ b/client/src/components/4LandingPage/LandingPage.module.css
@@ -12,7 +12,7 @@
   color: rgb(241, 241, 226);
   font-size:55px;
   float: right;
-  padding-top: 1em;
+  padding-top: 0em;
   padding-right: 1em;
 
 }
@@ -25,29 +25,39 @@
   float:right;
   padding-right: 2em;
   padding-left: 25em;
-  padding-top: 1em;
+  /* padding-top: 0em; */
   /* padding-bottom: 90em; */
   margin-right: 10px
 
 }
 
-
-/* .land button{
-background: #3068a38e;
-border: none;
-padding: 15px 25px;
-font-family: sans-serif;
-color: white;
-margin-top: 25px;
-margin-left: 10px;
-transition: all ease-in-out 0.2s;
-border-radius: 3px;
+.button{
+  float:right;
+  padding-right: 9em;
+  padding-top: 5em;
 }
 
-.land button:hover {
-  background: rgb(0, 0, 0);
-}    
- */
+.button button {
+  color: #fdfdfd;
+  letter-spacing: 2px;
+  font-size: 25px;
+  text-decoration: none;
+  background-color: #ffffff00;
+  border: none;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  transition: 0.4s;
+  border: 1px solid rgba(255, 255, 255, 0.499);
+  padding: 5px;
+  border-radius: 2px;
+}
+
+.button button:hover {
+  cursor: pointer;
+  background-color: rgba(197, 92, 0, 0.452);
+  border: 1px solid rgba(213, 99, 0, 0.452);
+}
+
+
 
 @font-face {
   font-family: "fontnew";
