--- a/client/src/components/7Card/Card.module.css
+++ b/client/src/components/7Card/Card.module.css
@@ -32,15 +32,24 @@
   
   
   .card:hover{
-    box-shadow: 0px 0px 15px 15px #000000;
-    -webkit-box-shadow: 0px 0px 15px 15px #0a0a0a;
+    box-shadow: 0px 0px 15px 15px #f8f0f0;
+    -webkit-box-shadow: 0px 0px 15px 15px #f4f4f4;
     transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
-    }
+    /* background-color: rgba(208, 93, 36, 0.697); */
+     background-color: rgb(208, 142, 88);
 
-    .img{
-        object-fit: cover;
-        width:20em;
-        height:20em;
-        border-radius: 2%;
+
+    
+  }
+
+ .card {
+  border: #292727;
+ }
+ 
+
+    .card img {
+      width: 25rem;
+      height: 20rem;
+
     }
