--- a/client/src/components/9SearchBar/SearchBar.module.css
+++ b/client/src/components/9SearchBar/SearchBar.module.css
@@ -27,7 +27,7 @@
   }
 
   .input {
-    background: #05050673;
+    background: #a7a7aaad;
     width: 270px;
     font-size: 20px;
     font-family: monospace;
@@ -57,8 +57,8 @@
   }
   .btn:hover {
     background: rgba(213, 99, 0, 0.452);
-
-    font-size: 20px;
+  }
+    /* font-size: 20px;
     cursor: pointer;
   }
-  
+   */
