--- a/client/src/components/8AllCards/AllCards.module.css
+++ b/client/src/components/8AllCards/AllCards.module.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 500px));
     justify-content: center;
+    margin-top: 22px;
 
 }
    
