--- a/client/src/components/5About/About.module.css
+++ b/client/src/components/5About/About.module.css
@@ -11,3 +11,22 @@
     height: 800px;
 
 }
+
+
+/* .container {
+    height: 100vh;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+} */
+
+.yellow {
+    color: #ffd700;
+}
+
+.red {
+    color: #df4759;
+}
