--- a/client/src/components/12Paginado/Paginado.module.css
+++ b/client/src/components/12Paginado/Paginado.module.css
@@ -1,10 +1,10 @@
 .container {
-    display: flex;
     justify-content: center;
     position: relative;
     margin-top: 20px;
     margin-bottom: 35px;
-    align-items: center;
+    align-items: center; 
+    display: flex;
   }
   
   .paginadoContainer {
@@ -23,13 +23,13 @@
     margin-bottom: 5px;
     border: 1px solid  rgba(255, 203, 114, 0);;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 15px;
+    font-size: 12px;
     font-weight: 600;
     color: #000000;
     display: inline-block;
     text-align: center;
     cursor: pointer;
-    border-color: rgb(17, 17, 17) ;
+    border-color: rgba(17, 17, 17, 0.158) ;
   }
   
   .paginadoContainer .itens .arrow:hover {
@@ -50,5 +50,5 @@
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: inline-block;
     text-align: center;
-    cursor: pointer;
+    cursor: pointer; 
   }
