--- a/client/src/components/3NavBar/NavBar.module.css
+++ b/client/src/components/3NavBar/NavBar.module.css
@@ -1,56 +1,58 @@
 .bodynav {
-    background-color: rgb(123, 123, 123);
-    padding-top: 20px;
-    padding-bottom: 5px;
-    background-attachment: fixed;
-   }
+  background-color: rgb(123, 123, 123);
+  padding-top: 1px;
+  padding-bottom: 1px;
+  background-attachment: fixed;
+}
 
-   
+.b1 button{
+  color: #fdfdfd;
+  letter-spacing: 2px;
+  font-size: 25px;
+  text-decoration: none;
+  background-color: #ffffff00;
+  /* border: none; */
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  transition: 0.4s;
+  border: 1px solid rgba(255, 255, 255, 0.499);
+  padding: 2px;
+  border-radius: 2px;
+  display: flex;
+  position: absolute;
+  margin-left: 1em;
+}
 
-.b1{
-    color: #fdfdfd;
-    letter-spacing: 2px;
-    font-size: 25px;
-    text-decoration: none;
-    background-color: #ffffff00;
-    border: none;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    transition: 0.4s;
-    border: 1px solid rgba(255, 255, 255, 0.499);
-    padding: 5px;
-    border-radius: 2px;
-    position: relative;;
-   }
-   
-   
-.b1:hover {
-    cursor: pointer;
-    background-color: rgba(197, 92, 0, 0.452);
-    border: 1px solid rgba(213, 99, 0, 0.452);
-    }    
+.b1:hover button{
+  cursor: pointer;
+  background-color: rgba(197, 92, 0, 0.452);
+  border: 1px solid rgba(213, 99, 0, 0.452);
+}
 
-    .b2{
-        color: #fdfdfd;
-        letter-spacing: 2px;
-        font-size: 25px;
-        text-decoration: none;
-        background-color: #ffffff00;
-        border: none;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        transition: 0.4s;
-        border: 1px solid rgba(255, 255, 255, 0.499);
-        padding: 5px;
-        border-radius: 2px;
-      position: relative;
-       }
-       
-       
-    .b2:hover {
-        cursor: pointer;
-        background-color: rgba(197, 92, 0, 0.452);
-        border: 1px solid rgba(213, 99, 0, 0.452);
-        }    
-    
+.b2 button{
+  color: #fdfdfd;
+  letter-spacing: 2px;
+  font-size: 25px;
+  text-decoration: none;
+  background-color: #ffffff00;
+  border: none;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  transition: 0.4s;
+  border: 1px solid rgba(255, 255, 255, 0.499);
+  padding: 2px;
+  border-radius: 2px;
+  display: flex;
+  position: absolute;
+  margin-left: 60em;
+}
+
+.b2:hover button{
+  cursor: pointer;
+  background-color: rgba(197, 92, 0, 0.452);
+  border: 1px solid rgba(213, 99, 0, 0.452);
+}
+
 /*    
    @font-face {
        font-family: "fontnew9";
