--- a/client/src/components/2Details/Details.module.css
+++ b/client/src/components/2Details/Details.module.css
@@ -6,14 +6,24 @@
   background-repeat: no-repeat;
 }
 .container {
+  position: relative;
+  padding: 60px;
+  /* background-color: rgba(145, 14, 150, 0.13); */
+  /* height: 900px; */
+  display: inline-block;
+  top: 20px;
+  /* width: 700px; */
+  border-radius: 5px;
+
+  line-height: 0.5;
   width: fit-content;
   position: relative;
   display: inline-block;
   /* top: 20px; */
 }
 .img {
-  width: 30rem;
-  height: 30rem;
+  width: 25rem;
+  height: 25rem;
   border-radius: 2%;
 }
 
@@ -21,21 +31,22 @@
   background: #b5842a6c;
   border: none;
   padding: 15px 25px 15px 25px;
-  /* font-family: "fontnew2"; */
   font-size: 30px;
   color: rgb(0, 0, 0);
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   margin-left: 5px;
   transition: all ease-in-out 0.2s;
   border-radius: 50%;
 }
 
 .link:hover {
-  background: rgba(154, 147, 147, 0.874);
+  background: rgba(229, 122, 250, 0.874);
 }
 
 .parrafo {
   color: #000000;
+  /* width: fit-content; */
+
   font-size: 30px;
   font-family: "fontnew2";
   border-radius: 1%;
