--- a/client/src/components/3NavBar/NavBar.module.css
+++ b/client/src/components/3NavBar/NavBar.module.css
@@ -1,37 +1,12 @@
 .bodynav {
   background-color: rgb(123, 123, 123);
-  padding-top: 1px;
-  padding-bottom: 1px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   background-attachment: fixed;
 }
 
 .b1 button{
-  color: #fdfdfd;
-  letter-spacing: 2px;
-  font-size: 25px;
-  text-decoration: none;
-  background-color: #ffffff00;
-  /* border: none; */
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  transition: 0.4s;
-  border: 1px solid rgba(255, 255, 255, 0.499);
-  padding: 2px;
-  border-radius: 2px;
-  display: flex;
-  position: absolute;
-  margin-left: 1em;
-}
-
-.b1:hover button{
-  cursor: pointer;
-  background-color: rgba(197, 92, 0, 0.452);
-  border: 1px solid rgba(213, 99, 0, 0.452);
-}
-
-.b2 button{
-  color: #fdfdfd;
-  letter-spacing: 2px;
+  /* letter-spacing: 2px; */
   font-size: 25px;
   text-decoration: none;
   background-color: #ffffff00;
@@ -39,19 +14,62 @@
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   transition: 0.4s;
-  border: 1px solid rgba(255, 255, 255, 0.499);
+  display: flex;
+  position: absolute; 
+align-items: center;
+}
+
+
+.b1:hover button{
+  cursor: pointer;
+  background-color: rgba(197, 92, 0, 0.452);
+  border: 1px solid rgba(213, 99, 0, 0.452);
+  border-radius: 50px;
+}
+
+.b2 button{
+  /* color: #fdfdfd; */
+  /* letter-spacing: 2px; */
+  font-size: 25px;
+  text-decoration: none;
+  background-color: #ffffff00;
+  border: none;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  transition: 0.4s;
+  /* border: 1px solid rgba(255, 255, 255, 0.499); */
   padding: 2px;
   border-radius: 2px;
   display: flex;
   position: absolute;
   margin-left: 60em;
+align-items: center;
+
 }
 
 .b2:hover button{
   cursor: pointer;
   background-color: rgba(197, 92, 0, 0.452);
   border: 1px solid rgba(213, 99, 0, 0.452);
+  border-radius: 50px;
+
 }
+
+
+
+
+button img{
+  max-width: 90px;
+  max-height: 90px;
+  margin-right: 8px;
+
+/* 
+  max-width: 90px;
+  max-height: 90px;
+  display: flex;
+  position:sticky */
+}
+
 
 /*    
    @font-face {
