--- a/client/src/components/5About/About.module.css
+++ b/client/src/components/5About/About.module.css
@@ -31,7 +31,7 @@
   
   .p{
     position: relative;
-    padding: 60px;
+    padding: 40px;
     background-color: rgba(86, 17, 88, 0.219);
     height: 500px;
     display: inline-block;
@@ -41,7 +41,15 @@
     font-size: 18px;
     text-align: center;
     align-items: center;
+    clear: left;
   }
     
   
-  
+  /* .thalita{
+    float:left;
+    width: 20em;
+    height: 20em ;
+    display: flex;
+    position:static;
+    margin-right: 5em;
+  } */
