--- a/client/src/components/2Details/Details.module.css
+++ b/client/src/components/2Details/Details.module.css
@@ -4,6 +4,7 @@
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
+  height: 1200px;
 }
 .container {
   position: relative;
@@ -63,4 +64,10 @@
   font-family: "fontnew1";
   color: rgb(0, 0, 0);
   font-size: 45px;
+}
+
+.gif{
+  width: 350px;
+  height: 350px;
+ margin-top: 20%;
 }
