--- a/client/src/components/1Home/Home.module.css
+++ b/client/src/components/1Home/Home.module.css
@@ -5,7 +5,9 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-color: rgba(0, 0, 0, 0.452);
-  height: 2000px;
+  /* height: 2500px; */
+  height: fit-content;
+
 }
 
 .loader {
