--- a/client/src/components/9SearchBar/SearchBar.module.css
+++ b/client/src/components/9SearchBar/SearchBar.module.css
@@ -29,6 +29,17 @@
   transition: all ease-in-out 0.2s;
 }
 
+.btn1 {
+  background: #e9000000;
+  border: none;
+  padding: 10px;
+  font-family: "fontnew2";
+  font-size: 30px;
+  color: rgb(0, 0, 0);
+  margin-bottom: 10px;
+  /* margin-left: 10PX; */
+}
+
 .input::placeholder {
   font-size: 20px;
   color: rgba(255, 246, 246, 0.466);
@@ -45,8 +56,14 @@
 }
 .btn:hover {
   background: rgba(213, 99, 0, 0.452);
-  border-radius: 10px;
+  border-radius: 50px;
 
+}
+.btn1:hover {
+  background: rgba(255, 244, 254, 0.267);
+  /* cursor: pointer; */
+  border: 1px solid rgba(170, 108, 221, 0.445);
+  border-radius: 50px;
 }
 /* font-size: 20px;
     cursor: pointer;
